# launch-warroom

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
data/: ground_truth.json  stress_test.json
data/eval/: eval_report_20260417_135924.md
scripts/: bootstrap_data.py  build_vectorstore.py  download_aact.py  download_openfda.py  download_pubmed.py  run_evals.py  run_warroom.py
src/warroom/: __init__.py  constants.py
src/warroom/agents/: __init__.py  clinical_intel.py  defense_strategist.py  launch_strategist.py  medical_affairs.py  prc_agent.py  prompts.py  red_team.py
src/warroom/db/: __init__.py  ingest.py  schema.py
src/warroom/eval/: __init__.py  llm_judge.py  rubrics.py
src/warroom/graph/: __init__.py  state.py  warroom_graph.py
src/warroom/rag/: __init__.py  chunker.py  embeddings.py  vectorstore.py
src/warroom/tools/: __init__.py  query_builder.py  rag_tools.py  sql_tools.py
src/warroom/validators/: __init__.py  citation_validator.py  temporal_leak.py
tests/: conftest.py
tests/test_agents/: test_agents.py  test_defense_strategist.py  test_prc_agent.py  test_red_team.py
tests/test_db/: test_ingest.py  test_schema.py
tests/test_rag/: test_chunker.py
tests/test_tools/: test_analytical_sql.py  test_rag_tools.py  test_sql_tools.py
tests/test_validators/: test_citation_validator.py  test_temporal_leak.py
